styles/_map.scss
#neighborhood-map {
  width: 100vw;
  height: 90vh;
  display: flex;
  justify-content: space-between;

  @media screen and (max-width: $mobile-breakpoint) {
    width: 100%;
    height: auto;
    flex-direction: column;
  }
  #map-sidebar {
    width: 40%;
    height: 100%;
    display: flex;
    flex-direction: column;
    border-right: 1px solid $color-brown;

    @media screen and (max-width: $mobile-breakpoint) {
      width: 100%;
      border-right: none;
      border-top: 1px solid $color-brown;
    }
  }
  #map {
    width: 60%;
    height: calc(100% - 2rem);
    padding: 2rem 0 0 2rem;

    @media screen and (max-width: $mobile-breakpoint) {
      height: 500px;
      width: 100%;
      padding: 0;
      order: -1;
    }
  }
  #map-popup {
    display: none;
    padding: 2rem;
    position: absolute;
    min-width: 400px;
    bottom: 1rem;
    left: 3rem;
    background-color: #fff;
    filter: drop-shadow(16px 16px 10px rgba(60, 60, 60, 0.1));
    z-index: 100;

    @media screen and (max-width: $mobile-breakpoint) {
      padding: 1rem;
      left: 1rem;
      min-width: unset;
      width: calc(100% - 2rem);
    }
  }

  #map-popup-url {
    text-decoration: none;
    color: $color-brown;
  }
  .filter-container {
    display: grid;
    gap: 0.5rem;
    grid-template-columns: 1fr 1fr;
    padding: calc(#{$gutter} / 2);
    border-bottom: 1px solid $color-brown;

    @media screen and (max-width: $mobile-breakpoint) {
      padding: 2rem 1rem;
    }
  }

  #map-items-container {
    overflow-y: auto;
    padding: calc(#{$gutter} / 2);

    @media screen and (max-width: $mobile-breakpoint) {
      overflow-y: auto;
      padding: 2rem 1rem;
    }
  }
  #map-items {
    display: flex;
    gap: 10px;
    flex-direction: column;
    text-align: left;
    @media screen and (max-width: $mobile-breakpoint) {
      flex-direction: row;
      flex-flow: column wrap;
      height: 300px;
    }
  }
  .clean-button {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    cursor: pointer;
    outline: inherit;
  }
  .map-button-container {
    width: 100%;
    display: flex;

    @media screen and (max-width: $mobile-breakpoint) {
      width: 190px;
      flex-shrink: 0;
      margin-right: 1rem;
      margin-bottom: 0.5rem;
    }
    &.active {
      .circle-list-item {
        background-color: $color-purple;
      }
    }
  }
  .map-item-button {
    padding-left: 0;
    margin-right: auto;
    color: $color-purple;
    text-align: left;
    display: flex;
  }
  .map-button {
    background-color: #fff;
    color: $color-brown;
    width: 100%;
    padding: 0.7rem 2rem;
    font-family: $font-garmond;
    font-size: 16px;
    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;

    @media screen and (max-width: $mobile-breakpoint) {
      padding: 0.5rem 1rem;
    }
  }
  .map-button-active,
  .map-button:hover {
    background-color: $color-purple;
    color: #fff;
  }

  .circle-list-item {
    border-radius: 100px;
    height: 25px;
    width: 25px;
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: $color-brown;
    flex-shrink: 0;
    transition: background-color 0.2s ease-in-out;
    font-size: 14px;
    margin-right: 1rem;
  }

  .mapboxgl-map {
    font-family: $font-garmond;
    font-size: 16px;
    color: $color-brown;
    h3 {
      color: $color-purple;
    }
    #map-popup-address {
      margin: 0.5rem 0 1rem;
    }
  }

  .mapboxgl-ctrl-bottom-left,
  .mapboxgl-ctrl-bottom-right {
    display: none;
  }
  .mapboxgl-ctrl-top-right {
    top: 2rem;
  }
}

